change defalut prefix

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,15 +31,22 @@ set -g status-interval 1
 ############################################# set key ##########################################################
 # bind prefix to z
 
-# prefix in sercer
-# set -g prefix C-z
-# unbind C-b
-# bind C-z send-prefix #
-
-# prefix in local
+# prefix in server
 # set -g prefix `
 # unbind C-b
 # bind ` send-prefix #
+
+# prefix in local
+# reset prefix key
+# unbind C-b
+# set -g prefix F2
+# bind F2 send-prefix
+
+# move to previous, last window
+# unbind p
+# unbind n
+# bind F2 previous-window
+# bind F2 last-window
 
 #Copy to the system clipboard in tmux.
 #bind y run "tmux save-buffer - | xclip -i -sel clipboard";
